--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server
-server.port=8080
+server.port=8082
 server.servlet.context-path=/api
 # Jpa settings
 spring.jpa.hibernate.ddl-auto=update
@@ -7,7 +7,7 @@ spring.jpa.generate-ddl=true
 # Datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB102Dialect
-spring.datasource.url=jdbc:mariadb://localhost:3306/proba?useSSL=false
+spring.datasource.url=jdbc:mariadb://localhost:3306/servis3?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 # Security
@@ -16,4 +16,4 @@ oauth.jwt.secret=secret_key
 amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
-destination.registrationEmail=registration_email
+destination.emailDestination=email_destination
